packages/taquito-michel-codec/test/contracts_015/ill_typed/pack_operation.tz
parameter unit;
storage unit;
code { DROP;
       UNIT; # starting storage for contract
       AMOUNT;                   # Push the starting balance
       NONE key_hash;                 # No delegate
       CREATE_CONTRACT          # Create the contract
         { parameter unit ;
           storage unit ;
           code
             { CDR;
               NIL operation;
               PAIR; } };
       DIP { DROP };
       # invalid PACK
       PACK;
       DROP;
       UNIT;
       NIL operation;
       PAIR; }
